# anomaly-we_vita

./: CMakeLists.txt  README.md
companion/: main.cpp
livearea/: template.xml
loader/: config.h  main.c  video_player.c
